--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-flow": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
     "@vue/test-utils": "^1.0.0-beta.25",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
