--- a/package.json
+++ b/package.json
@@ -28,47 +28,50 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
-    "@vue/test-utils": "^1.0.0-beta.25",
-    "babel-eslint": "^10.0.3",
+    "@vue/test-utils": "^1.0.0-beta.32",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.1.0",
+    "bootstrap-vue": "^2.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.3.2",
-    "d3": "^5.14.2",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb": "^18.0.1",
+    "css-loader": "^3.4.2",
+    "d3": "^5.15.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-vue": "^6.2.2",
     "express": "^4.17.1",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "stylelint": "^12.0.0",
-    "terser-webpack-plugin": "^2.3.0",
+    "stylelint": "^12.0.1",
+    "terser-webpack-plugin": "^2.3.5",
     "triple-beam": "^1.3.0",
     "ts-loader": "^6.2.1",
     "vue": "^2.6.11",
     "vue-jest": "^3.0.5",
-    "vue-loader": "^15.8.3",
+    "vue-loader": "^15.9.0",
     "vue-migration-helper": "^1.1.8",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2"
+  },
+  "devDependencies": {
+    "file-loader": "^6.0.0"
   }
 }
