--- a/package.json
+++ b/package.json
@@ -28,50 +28,52 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
-    "@vue/test-utils": "^1.0.0-beta.32",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
+    "@vue/test-utils": "^1.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.7.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.4.2",
-    "d3": "^5.15.0",
+    "css-loader": "^3.6.0",
+    "d3": "^5.16.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-loader": "^3.0.4",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-vue": "^6.2.2",
     "express": "^4.17.1",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "stylelint": "^12.0.1",
-    "terser-webpack-plugin": "^2.3.5",
+    "terser-webpack-plugin": "^2.3.8",
     "triple-beam": "^1.3.0",
-    "ts-loader": "^6.2.1",
+    "ts-loader": "^6.2.2",
     "vue": "^2.6.11",
-    "vue-jest": "^3.0.5",
-    "vue-loader": "^15.9.0",
+    "vue-jest": "^3.0.6",
+    "vue-loader": "^15.9.3",
     "vue-migration-helper": "^1.1.8",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
-    "file-loader": "^6.0.0"
+    "file-loader": "^6.1.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0"
   }
 }
